--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am looking for a Career in the Tech World</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Los Angeles,California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>bike riding, drawing, video games</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>software developer<here class="Q11Q">q1q1qq1q2 `</here>.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently reside in Orlando,Florida.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have always had interest in computers & graphic design</p>_
     </section>
 
     <footer id="footer">
