--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>bike riding, drawing, video games</p>
       <h1>What's your dream job?</h1>
-      <p>software developer<here class="Q11Q">q1q1qq1q2 `</here>.</p>
+      <p>software developer</p>
       <h1>Where do you live?</h1>
       <p>I currently reside in Orlando,Florida.</p>
       <h1>Why do you want to be a web developer?</h1>
